     2v20 : Ensure String.charCodeAt returns NaN for out of bounds chars

     2v19 : Fix Object.values/entries for numeric keys after 2v18 regression (fix #2375)
            nRF52: for SD>5 use static buffers for advertising and scan response data (#2367)
            Bangle.js: Add Bangle.showRecoveryMenu, and if storage is corrupt then show it rather than automatically doing factory reset
            Fix Graphics.createImage if the last character is a newline
            Graphics: Fix issue if drawImage given a non-image
            Added optional Unicode support (Linux/Bangle.js only currently)
            Added optional PBF font loading support (Linux/Bangle.js only currently)
            Fix recent regression in switch handling caused by Strings only being interpreted when executing
            Ensure [].length is a constant (we don't support assignment)
            Bangle.js: showMenu now won't redraw menu items if the onchange handler changed the menu
            Graphics: Add Espruino-specific extension to PBF font loader to handle 2bpp
            Graphics: Improve blendColor when outputting to 2/4/8bpp Graphics
            Graphics: Allow setFont(...) to work with >1bpp and PBF fonts
            Add Object.addListener(same as '.on') and prependListener to allow a handler to be added first
            Fix regression with g.wrapString and long UTF8 strings (fix #2385)
            Bangle.js2: Fix reusing touch coordinates under high load (fix #2374)
            Bangle.js: setUI now has a 'redraw' argument to allow apps to provide a way to redraw themselves
            Now executes ".bootPowerOn" from Storage on first boot after power restored
            Bangle.js: Add Bangle.setBacklight(), Bangle.backlight event, Bangle.isBacklightOn() and allow input when lcd off if lockTimeout is 0 (fix #2383)
            Added NRF.eraseBonds() to allow peer manager info to be removed (other than by holding all buttons down)